# bnn-localization

./: .gitignore  README.md  docker_join.sh  docker_run.sh  evaluate_for_Nuscenes.py
Docker/: Dockerfile  build.sh
bags/: map_process.ipynb
catkin_ws/src/: evaluate.py
catkin_ws/src/gps_transformer/gps_transformer/: CMakeLists.txt  package.xml
catkin_ws/src/gps_transformer/gps_transformer/include/gps_transformer/: gps_transformer.h
catkin_ws/src/gps_transformer/gps_transformer/src/: gps_transformer.cpp
catkin_ws/src/icp_localization/: CMakeLists.txt  package.xml
catkin_ws/src/icp_localization/launch/: itri_serial.launch  robot_pose_ekf.launch  serial.launch  serial_normal.launch
catkin_ws/src/icp_localization/src/: ICPManager.cpp  ICPManager.hpp  Icp_ekf.cpp  NormalICPManager.cpp  NormalICPManager.hpp  icp.hpp  localize_node.cpp  ros_serial_icp.cpp  ros_serial_normal_icp.cpp  ros_subscribe_icp.cpp
catkin_ws/src/pcl_merge/: CMakeLists.txt  package.xml
catkin_ws/src/pcl_merge/src/: pcl_merge.cpp
catkin_ws/src/pcl_segment/: CMakeLists.txt  package.xml
catkin_ws/src/pcl_segment/src/: horizon_segmentation.cpp
catkin_ws/src/pointcloud_util/: CMakeLists.txt  package.xml
catkin_ws/src/pointcloud_util/launch/: ground_filter.launch  outlier_filter.launch  read_file.launch
catkin_ws/src/pointcloud_util/src/: downsampling.cpp  ground_filter.cpp  outlier_removal.cpp  read_file.cpp  read_gdtruth.cpp
catkin_ws/src/result_evaluate/: CMakeLists.txt  package.xml
catkin_ws/src/result_evaluate/scripts/: log_output.py  show_gt.py  visualize_csv.py
catkin_ws/src/result_trans/: CMakeLists.txt  package.xml
catkin_ws/src/result_trans/src/: csv_output.cpp
catkin_ws/test_data/: ground_truth.csv
